# gws-polarlight-sunshine

./: CMakeLists.txt  README.rst
Polarlight-Halo/: .gitignore  .gitmodules  CMakeLists.txt  README.md
Polarlight-Halo/ci/: Jenkinsfile
Polarlight-Halo/src/: VideoEncoderHEVC.h  VideoEncoderVCE.h  config.cpp  config.h  confighttp.cpp  confighttp.h  crypto.cpp  crypto.h  entry.cpp  httpcommon.cpp  main.h  metrics.h  nvhttp.cpp  nvhttp.h  process.cpp  rtsp.cpp  rtsp.h  system_tray.cpp  thread_safe.h  upnp.cpp
Polarlight-Halo/src/platform/: common.h
Polarlight-Halo/src/platform/windows/: misc.cpp  windows.rs.in
Polarlight-Sunshine/: .gitignore  .gitmodules  CMakeLists.txt
Polarlight-Sunshine/ci/: Jenkinsfile
Polarlight-Sunshine/docs/: sunshine.conf.template
Polarlight-Sunshine/src/: cbs.h  config.cpp  config.h  crypto.cpp  export_apis.cpp  export_apis.h  httpcommon.cpp  input.cpp  main.cpp  main.h  metrics.h  perf_counter.cpp  perf_counter.h  process.cpp  rtsp.cpp  rtsp.h  singleton.h  stream.cpp  stream.h  system_tray.cpp  thread_safe.h  upnp.cpp  video.cpp  video.h
Polarlight-Sunshine/src/platform/: common.h
Polarlight-Sunshine/src/platform/linux/: publish.cpp
Polarlight-Sunshine/src/platform/macos/: publish.cpp
Polarlight-Sunshine/src/platform/windows/: audio.cpp  display.h  display_base.cpp  display_delegate.cpp  display_delegate.h  display_ram.cpp  display_vram.cpp  input.cpp  misc.cpp
Polarlight-Sunshine/src_assets/common/assets/web/: config.html
Polarlight-Sunshine/src_assets/windows/assets/shaders/directx/: ConvertUVPS.hlsl  ConvertUVPS_PQ.hlsl  ConvertYPS.hlsl  ConvertYPS_PQ.hlsl  CursorVS.hlsl
Polarlight-Sunshine/tools/: CMakeLists.txt  audio.cpp  ddprobe.cpp  dxgi.cpp  sunshinesvc.cpp
Polarlight-Sunshine/tools/SteamStreamingSpeakers/: SteamStreamingSpeakers.inf
PolarlightBuild/Polarlight-HBridge/: CMakeLists.txt  HaloAPI.cpp  HaloAPI.h  HaloType.h  Locker.h  Main.cpp  README.md  halo.cpp  halo.h  log.cpp  log.h  singleton.h
PolarlightBuild/Polarlight-HBridge/test/: test101.x
PolarlightBuild/Polarlight-PBridge/: .gitignore  CMakeLists.txt  Main.cpp  Pbridge.h  README.md  repo_init.bat
PolarlightBuild/Polarlight-PBridge/tests/: import_test.x  test_sunshine_api.x
docs/: sunshine.conf.template
docs/source/building/: windows.rst
src/: AuroraLib.cpp  AuroraLib.h  audio.cpp  config.cpp  config.h  confighttp.cpp  crypto.cpp  crypto.h  main.cpp  main.h  metrics.h  nvhttp.cpp  process.h  rtsp.cpp  rtsp.h  singleton.h  stream.cpp  stream.h  upnp.cpp  video.cpp  video.h
src/platform/: common.h
src/platform/windows/: display.h  display_base.cpp  display_delegate.cpp  display_delegate.h  display_vram.cpp  publish.cpp
src_assets/common/assets/web/: config.html
tools/: audio.cpp
